fix : skill-progress spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11443,7 +11443,7 @@ ul.children {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  .progress-area {
+  .progress-area .elementor-container {
     padding: 0 12px !important;
   }
 }
